--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@ input { width: 80px; text-align: center; }
 button { background-color: #3b82f6; color: #fff; cursor: pointer; }
 button:hover { background-color: #2563eb; }
 #info, #hint, #result { margin-top: 15px; font-size: 18px; }
-#langBtn { position: absolute; top: 10px; right: 15px; background: #1e293b; color: white; border-radius: 8px; }
 </style>
 </head>
 <body>
 
-<button id="langBtn">🇩🇪 Deutsch</button>
-<h1 id="title">🔢 Zahlen erraten</h1>
-<p id="rangeText">Lade Einstellungen...</p>
+<h1>Zahlen-Rätsel 🧩</h1>
+<p id="rangeText">Lade Einstellungen…</p>
 <input type="number" id="guess" placeholder="Zahl">
 <button id="guessBtn">Raten</button>
 <p id="hint"></p>
@@ -28,9 +26,7 @@ button:hover { background-color: #2563eb; }
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-import { getDatabase, ref, get, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
-
-document.addEventListener("DOMContentLoaded", () => {
+import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
@@ -45,133 +41,84 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
-// Elemente
+const rangeText = document.getElementById("rangeText");
 const guessInput = document.getElementById("guess");
 const guessBtn = document.getElementById("guessBtn");
-const info = document.getElementById("info");
 const hint = document.getElementById("hint");
+const info = document.getElementById("info");
 const result = document.getElementById("result");
-const rangeText = document.getElementById("rangeText");
-const title = document.getElementById("title");
-const langBtn = document.getElementById("langBtn");
 
-let lang = "de";
 let settings = {};
 let currentNumber = 0;
 let attemptsLeft = 0;
 
-// Texte
-const texts = {
-  de: { title:"🔢 Zahlen erraten", placeholder:"Zahl", guessBtn:"Raten", loading:"Lade Einstellungen...",
-        range:(min,max)=>`Errate die Zahl zwischen ${min} und ${max}`, tooHigh:"📉 Zu hoch!", tooLow:"📈 Zu niedrig!",
-        wrong:"❌ Falsch! Versuch es nochmal!", correct:"🎉 Richtig! Du wirst weitergeleitet...",
-        noTries:(num)=>`❌ Keine Versuche mehr! Die richtige Zahl war ${num}.`, triesLeft:(num)=>`Noch ${num} Versuche.`,
-        invalid:"⚠️ Bitte gib eine gültige Zahl ein!", errorLoad:"❌ Einstellungen konnten nicht geladen werden!" },
-  en: { title:"🔢 Guess the Number", placeholder:"Number", guessBtn:"Guess", loading:"Loading settings...",
-        range:(min,max)=>`Guess the number between ${min} and ${max}`, tooHigh:"📉 Too high!", tooLow:"📈 Too low!",
-        wrong:"❌ Wrong! Try again!", correct:"🎉 Correct! Redirecting...", noTries:(num)=>`❌ No tries left! The correct number was ${num}.`,
-        triesLeft:(num)=>`${num} tries left.`, invalid:"⚠️ Please enter a valid number!", errorLoad:"❌ Could not load settings!" }
-};
-
-// Sprachumschalter
-langBtn.onclick = () => {
-  lang = lang==="de"?"en":"de";
-  langBtn.textContent = lang==="de"?"🇩🇪 Deutsch":"🇬🇧 English";
-  applyLanguage();
-};
-
-function applyLanguage(){
-  title.textContent = texts[lang].title;
-  guessInput.placeholder = texts[lang].placeholder;
-  guessBtn.textContent = texts[lang].guessBtn;
-  if(settings.minNumber) rangeText.textContent = texts[lang].range(settings.minNumber,settings.maxNumber);
-  else rangeText.textContent = texts[lang].loading;
-}
-
-// Einstellungen laden
-async function loadSettings(){
+// 🔹 Lade Einstellungen
+async function loadSettings() {
   try {
-    const snapshot = await get(ref(db,"settings"));
-    if(snapshot.exists()){ 
-      settings = snapshot.val(); 
-      applyLanguage(); 
-      resetGame(); 
+    const snapshot = await get(ref(db, "settings"));
+    console.log("Snapshot existiert?", snapshot.exists());
+    console.log("Snapshot value:", snapshot.val());
+
+    if(snapshot.exists()){
+      settings = snapshot.val();
+      rangeText.textContent = `Errate die Zahl zwischen ${settings.minNumber} und ${settings.maxNumber}`;
+      startGame();
     } else {
-      rangeText.textContent = texts[lang].errorLoad;
+      rangeText.textContent = "❌ Einstellungen konnten nicht gefunden werden!";
     }
-  } catch(e){
+  } catch(e) {
     console.error("Fehler beim Laden der Einstellungen:", e);
-    rangeText.textContent = texts[lang].errorLoad;
+    rangeText.textContent = "❌ Fehler beim Laden der Einstellungen!";
   }
 }
 
-// Neue Runde
-function resetGame(){
-  const min=settings.minNumber||1;
-  const max=settings.maxNumber||50;
-  const isRandom=settings.randomNumber;
-  currentNumber=isRandom?Math.floor(Math.random()*(max-min+1))+min:Number(settings.fixedNumber)||10;
-  attemptsLeft=settings.maxAttempts||5;
-  info.textContent=texts[lang].triesLeft(attemptsLeft);
-  hint.textContent="";
-  result.textContent="";
-  guessInput.disabled=false;
-  guessBtn.disabled=false;
+// 🔹 Starte das Spiel
+function startGame() {
+  const min = settings.minNumber || 1;
+  const max = settings.maxNumber || 50;
+  const isRandom = settings.randomNumber;
+  currentNumber = isRandom ? Math.floor(Math.random()*(max-min+1))+min : Number(settings.fixedNumber) || 10;
+  attemptsLeft = settings.maxAttempts || 5;
+  info.textContent = `Noch ${attemptsLeft} Versuche`;
 }
 
-// Rateversuch
-guessBtn.onclick=()=>{
-  const guess=Number(guessInput.value);
-  if(!guess){ hint.textContent=texts[lang].invalid; return; }
+// 🔹 Rate-Button
+guessBtn.onclick = () => {
+  const guess = Number(guessInput.value);
+  if(!guess){ hint.textContent = "⚠️ Bitte gib eine gültige Zahl ein!"; return; }
+
   attemptsLeft--;
-  const isRandom=settings.randomNumber;
+  info.textContent = `Noch ${attemptsLeft} Versuche`;
 
-  if(guess===currentNumber){
-    result.textContent=texts[lang].correct;
-    setTimeout(()=>window.location.href="anfrage.html",1000);
-    guessInput.disabled=true;
-    guessBtn.disabled=true;
+  if(guess === currentNumber){
+    result.textContent = "🎉 Richtig!";
+    guessInput.disabled = true;
+    guessBtn.disabled = true;
     return;
   }
 
-  if(attemptsLeft<=0){
-    result.textContent=texts[lang].noTries(currentNumber);
-    guessInput.disabled=true;
-    guessBtn.disabled=true;
+  if(attemptsLeft <= 0){
+    result.textContent = `❌ Keine Versuche mehr! Die Zahl war ${currentNumber}`;
+    guessInput.disabled = true;
+    guessBtn.disabled = true;
     return;
   }
 
-  hint.textContent=texts[lang].wrong;
+  // Bei fester Zahl anzeigen ob zu hoch/zu niedrig
+  if(!settings.randomNumber){
+    result.textContent = guess > currentNumber ? "📉 Zu hoch!" : "📈 Zu niedrig!";
+  } else {
+    result.textContent = "❌ Falsch! Versuch es nochmal!";
+  }
 
-  if(!isRandom){
-    const highLow = guess>currentNumber ? texts[lang].tooHigh : texts[lang].tooLow;
-    result.innerHTML = highLow;
-  } else result.textContent="";
-
-  info.textContent=texts[lang].triesLeft(attemptsLeft);
-
-  if(isRandom){
-    const min=settings.minNumber||1;
-    const max=settings.maxNumber||50;
-    currentNumber=Math.floor(Math.random()*(max-min+1))+min;
+  // Neue Zahl wenn Zufall
+  if(settings.randomNumber){
+    currentNumber = Math.floor(Math.random()*(settings.maxNumber-settings.minNumber+1)) + settings.minNumber;
   }
 }
-
-// Reload Listener
-const reloadRef = ref(db,"reloadFlag/time");
-let firstLoad=true;
-onValue(reloadRef,(snap)=>{
-  if(!snap.exists())return;
-  const newTime=snap.val();
-  const lastReload=localStorage.getItem("lastReloadTime");
-  if(firstLoad){ firstLoad=false; localStorage.setItem("lastReloadTime",newTime); return; }
-  if(newTime && newTime!==lastReload){ localStorage.setItem("lastReloadTime",newTime); location.reload(); }
-});
 
 // Start
 loadSettings();
-
-});
 </script>
 </body>
 </html>
