--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@ input { width: 80px; text-align: center; }
 button { background-color: #3b82f6; color: #fff; cursor: pointer; }
 button:hover { background-color: #2563eb; }
 #info, #hint, #result { margin-top: 15px; font-size: 18px; }
+#langBtn { position: absolute; top: 10px; right: 15px; background: #1e293b; color: white; border-radius: 8px; }
 </style>
 </head>
 <body>
 
-<h1>Zahlen-Rätsel 🧩</h1>
+<button id="langBtn">🇩🇪 Deutsch</button>
+<h1 id="title">Zahlen-Rätsel 🧩</h1>
 <p id="rangeText">Lade Einstellungen…</p>
 <input type="number" id="guess" placeholder="Zahl">
 <button id="guessBtn">Raten</button>
@@ -26,7 +28,7 @@ button:hover { background-color: #2563eb; }
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+import { getDatabase, ref, get, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
@@ -41,84 +43,129 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
+// Elemente
 const rangeText = document.getElementById("rangeText");
 const guessInput = document.getElementById("guess");
 const guessBtn = document.getElementById("guessBtn");
 const hint = document.getElementById("hint");
 const info = document.getElementById("info");
 const result = document.getElementById("result");
+const title = document.getElementById("title");
+const langBtn = document.getElementById("langBtn");
 
 let settings = {};
 let currentNumber = 0;
 let attemptsLeft = 0;
+let lang = "de";
 
-// 🔹 Lade Einstellungen
-async function loadSettings() {
+// Texte
+const texts = {
+  de: { title:"🔢 Zahlen erraten", placeholder:"Zahl", guessBtn:"Raten", loading:"Lade Einstellungen...",
+        range:(min,max)=>`Errate die Zahl zwischen ${min} und ${max}`, tooHigh:"📉 Zu hoch!", tooLow:"📈 Zu niedrig!",
+        wrong:"❌ Falsch! Versuch es nochmal!", correct:"🎉 Richtig!", noTries:(num)=>`❌ Keine Versuche mehr! Die Zahl war ${num}.`,
+        triesLeft:(num)=>`Noch ${num} Versuche`, invalid:"⚠️ Bitte gib eine gültige Zahl ein!", errorLoad:"❌ Einstellungen konnten nicht geladen werden!" },
+  en: { title:"🔢 Guess the Number", placeholder:"Number", guessBtn:"Guess", loading:"Loading settings...",
+        range:(min,max)=>`Guess the number between ${min} and ${max}`, tooHigh:"📉 Too high!", tooLow:"📈 Too low!",
+        wrong:"❌ Wrong! Try again!", correct:"🎉 Correct!", noTries:(num)=>`❌ No tries left! The correct number was ${num}.`,
+        triesLeft:(num)=>`${num} tries left`, invalid:"⚠️ Please enter a valid number!", errorLoad:"❌ Could not load settings!" }
+};
+
+// Sprachumschalter
+langBtn.onclick = () => {
+  lang = lang==="de"?"en":"de";
+  langBtn.textContent = lang==="de"?"🇩🇪 Deutsch":"🇬🇧 English";
+  applyLanguage();
+};
+
+function applyLanguage(){
+  title.textContent = texts[lang].title;
+  guessInput.placeholder = texts[lang].placeholder;
+  guessBtn.textContent = texts[lang].guessBtn;
+  if(settings.minNumber) rangeText.textContent = texts[lang].range(settings.minNumber,settings.maxNumber);
+  else rangeText.textContent = texts[lang].loading;
+}
+
+// Einstellungen laden
+async function loadSettings(){
   try {
     const snapshot = await get(ref(db, "settings"));
     console.log("Snapshot existiert?", snapshot.exists());
     console.log("Snapshot value:", snapshot.val());
-
     if(snapshot.exists()){
       settings = snapshot.val();
-      rangeText.textContent = `Errate die Zahl zwischen ${settings.minNumber} und ${settings.maxNumber}`;
+      applyLanguage();
       startGame();
     } else {
-      rangeText.textContent = "❌ Einstellungen konnten nicht gefunden werden!";
+      rangeText.textContent = texts[lang].errorLoad;
     }
-  } catch(e) {
+  } catch(e){
     console.error("Fehler beim Laden der Einstellungen:", e);
-    rangeText.textContent = "❌ Fehler beim Laden der Einstellungen!";
+    rangeText.textContent = texts[lang].errorLoad;
   }
 }
 
-// 🔹 Starte das Spiel
-function startGame() {
+// Spiel starten
+function startGame(){
   const min = settings.minNumber || 1;
   const max = settings.maxNumber || 50;
   const isRandom = settings.randomNumber;
-  currentNumber = isRandom ? Math.floor(Math.random()*(max-min+1))+min : Number(settings.fixedNumber) || 10;
+  currentNumber = isRandom ? Math.floor(Math.random()*(max-min+1))+min : Number(settings.fixedNumber)||10;
   attemptsLeft = settings.maxAttempts || 5;
-  info.textContent = `Noch ${attemptsLeft} Versuche`;
+  info.textContent = texts[lang].triesLeft(attemptsLeft);
+  hint.textContent="";
+  result.textContent="";
+  guessInput.disabled=false;
+  guessBtn.disabled=false;
 }
 
-// 🔹 Rate-Button
+// Rateversuch
 guessBtn.onclick = () => {
   const guess = Number(guessInput.value);
-  if(!guess){ hint.textContent = "⚠️ Bitte gib eine gültige Zahl ein!"; return; }
+  if(!guess){ hint.textContent = texts[lang].invalid; return; }
 
   attemptsLeft--;
-  info.textContent = `Noch ${attemptsLeft} Versuche`;
+  info.textContent = texts[lang].triesLeft(attemptsLeft);
 
-  if(guess === currentNumber){
-    result.textContent = "🎉 Richtig!";
-    guessInput.disabled = true;
-    guessBtn.disabled = true;
+  if(guess===currentNumber){
+    result.textContent = texts[lang].correct;
+    guessInput.disabled=true;
+    guessBtn.disabled=true;
     return;
   }
 
-  if(attemptsLeft <= 0){
-    result.textContent = `❌ Keine Versuche mehr! Die Zahl war ${currentNumber}`;
-    guessInput.disabled = true;
-    guessBtn.disabled = true;
+  if(attemptsLeft<=0){
+    result.textContent = texts[lang].noTries(currentNumber);
+    guessInput.disabled=true;
+    guessBtn.disabled=true;
     return;
   }
 
-  // Bei fester Zahl anzeigen ob zu hoch/zu niedrig
   if(!settings.randomNumber){
-    result.textContent = guess > currentNumber ? "📉 Zu hoch!" : "📈 Zu niedrig!";
+    result.textContent = guess>currentNumber ? texts[lang].tooHigh : texts[lang].tooLow;
   } else {
-    result.textContent = "❌ Falsch! Versuch es nochmal!";
-  }
-
-  // Neue Zahl wenn Zufall
-  if(settings.randomNumber){
+    result.textContent = texts[lang].wrong;
+    // Neue Zahl wenn Random
     currentNumber = Math.floor(Math.random()*(settings.maxNumber-settings.minNumber+1)) + settings.minNumber;
   }
 }
 
+// Reload Listener (Admin Button)
+const reloadRef = ref(db,"reloadFlag/time");
+let firstLoad = true;
+onValue(reloadRef,(snap)=>{
+  if(!snap.exists()) return;
+  const newTime = snap.val();
+  const lastReload = localStorage.getItem("lastReloadTime");
+  if(firstLoad){ firstLoad=false; localStorage.setItem("lastReloadTime",newTime); return; }
+  if(newTime && newTime!==lastReload){
+    localStorage.setItem("lastReloadTime",newTime);
+    location.reload();
+  }
+});
+
 // Start
 loadSettings();
+
 </script>
 </body>
 </html>
